:recycle:[Thang] refactor organization